fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ margin: 0;
 
 .chatbot {
     width: 90%;
-    height: 90%;
+    height: calc(var(--vh, 1vh) * 90);
     float: left;
   }
 
